--- a/aula2/produto.html
+++ b/aula2/produto.html
@@ -10,28 +10,32 @@
 </head>
 <body>
     <header>
-        <h1>
-            <img src="./logo.png" alt="" srcset="">
-        </h1>
-        <nav class="navegacao">
-            <ul>
-                <li>
-                    <a href="index.html">
-                        Home
-                    </a>
-                </li>
-                <li>
-                    <a href="produtos.html">
-                        Produtos
-                    </a>
-                </li>
-                <li>
-                    <a href="contato.html">
-                        Contato
-                    </a>
-                </li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>
+                <img src="./logo.png" alt="" srcset="">
+            </h1>
+            <nav class="navegacao">
+                <ul>
+                    <li>
+                        <a href="index.html">
+                            Home
+                        </a>
+                    </li>
+                    <li>
+                        <a href="produtos.html">
+                            Produtos
+                        </a>
+                    </li>
+                    <li>
+                        <a href="contato.html">
+                            Contato
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
