--- a/aula2/produto.html
+++ b/aula2/produto.html
@@ -35,7 +35,33 @@
             </nav>
         </div>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <div class="container">
+            <ul class="produtos">
+                <li> 
+                    <h2> Cabelo</h2>
+                    <img src="cabelo.jpg" alt="">
+                    <p class="descricao"> Na tesoura ou máquina, como o cliente preferir</p>
+                    <p>R$ 25,00</p>
+                </li>
+                <li> 
+                    <h2> Barba </h2>
+                    <img src="barba.jpg" alt="">
+                    <p  class="descricao"> Corte e desenho profissional de barba</p>
+                    <p>R$ 18,00</p> 
+                </li>
+                <li> 
+                    <h2>Cabelo + Barba</h2>
+                    <img src="cabelo+barba.jpg" alt="">
+                    <p class="descricao">Pacote completo de cabelo e barba</p>
+                    <p>R$ 35,00</p>
+                </li>
+            </ul>
+        </div>
+    </main>
+    <footer>
+        <img src="./logo-branco.png" alt="">
+        <p> &copy; Copyright Barbearia Alura 2019</p>
+    </footer>
 </body>
 </html>
