--- a/aula5/index.html
+++ b/aula5/index.html
@@ -25,8 +25,15 @@
         <link rel="stylesheet" href="./assets/css/receitas/receita-descricao.css">
         <link rel="stylesheet" href="./assets/css/receitas/receita-imagem.css">
         <link rel="stylesheet" href="./assets/css/receitas/receita-titulo.css">
-
-    
+        <link rel="stylesheet" href="./assets/css/quem-somos/quem-somos.css">
+        <link rel="stylesheet" href="./assets/css/quem-somos/quem-somos-titulo.css">
+        <link rel="stylesheet" href="./assets/css/quem-somos/quem-somos-descricao.css">
+        <link rel="stylesheet" href="./assets/css/pessoas.css">
+        <link rel="stylesheet" href="./assets/css/pessoa/pessoa.css">
+        <link rel="stylesheet" href="./assets/css/pessoa/pessoa-funcao.css">
+        <link rel="stylesheet" href="./assets/css/pessoa/pessoa-imagem.css">
+        <link rel="stylesheet" href="./assets/css/pessoa/pessoa-nome.css">
+        <link rel="stylesheet" href="./assets/css/rodape.css">
     </head>
     <body>
         <header class="cabecalho">
@@ -98,5 +105,29 @@
                 </div>
             </div>
         </section>
+        <section class="quem-somos">
+            <h3 class="quem-somos__titulo">Quem somos</h3>
+            <p class="quem-somos__descricao">Conheça a comunidade por trás da iniciativa</p>
+            <div class="pessoas">
+                <div class="pessoa">
+                    <div class="pessoa__imagem pessoa__imagem--roberta"></div>
+                    <span class="pessoa__nome">Roberta</span>
+                    <span class="pessoa__funcao">Conteúdo</span>
+                </div>
+                <div class="pessoa">
+                    <div class="pessoa__imagem pessoa__imagem--marcela"></div>
+                    <span class="pessoa__nome">Marcela</span>
+                    <span class="pessoa__funcao">Chef de cozinha</span>
+                </div>
+                <div class="pessoa">
+                    <div class="pessoa__imagem pessoa__imagem--andreia"></div>
+                    <span class="pessoa__nome">Andréia</span>
+                    <span class="pessoa__funcao">Pequena Produtora</span>
+                </div>
+            </div>
+        </section>
+        <footer class="rodape">
+            Contato: exemplo@email.com.br
+        </footer>
     </body>
 </html>
