--- a/aula5/index.html
+++ b/aula5/index.html
@@ -34,10 +34,11 @@
         <link rel="stylesheet" href="./assets/css/pessoa/pessoa-imagem.css">
         <link rel="stylesheet" href="./assets/css/pessoa/pessoa-nome.css">
         <link rel="stylesheet" href="./assets/css/rodape.css">
+        <link rel="stylesheet" href="./assets/css/logo.css">
     </head>
     <body>
         <header class="cabecalho">
-            <img class="cabecalho__logo"alt="Fruto & Fruta" src="./assets/img/logo.jpg"/>
+            <img class="cabecalho__logo" alt="Fruto & Fruta" src="./assets/img/logo.jpg"/>
             <nav class="menu">
                 <ul class="menu__lista">
                     <li class="menu__item"><a class="menu__link active"  href=#>Início</a></li>
