--- a/aula_gridlayout/index.html
+++ b/aula_gridlayout/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./assets/css/destaques.css">
     <link rel="stylesheet" href="./assets/css/populares.css">
     <link rel="stylesheet" href="./assets/css/cabecalho.css">
+    <link rel="stylesheet" href="./assets/css/rodape.css">
 </head>
 <body class="app">
     <header class="cabecalho">
@@ -385,7 +386,7 @@
             </div>
         </section>
     </main>
-    <footer class="rodape">Rodapé</footer>
+    <footer class="rodape">Todos os direitos reservados &copy;2019</footer>
     <script src="./assets/js/fontawesome.all.min.js"></script>
 </body>
 </html>
