--- a/javascript/aula1/index.html
+++ b/javascript/aula1/index.html
@@ -14,14 +14,13 @@
     <link rel="icon" type="image/png" href="images/bateria.png">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/estilos.css">
-    <script src="./main.js"></script>
 </head>
 <body>
 
     <h1>Alura Midi</h1>
 
     <section class="teclado">
-        <button onclick="alert('oi')" class="tecla tecla_pom">Pom</button>
+        <button class="tecla tecla_pom">Pom</button>
         <button class="tecla tecla_clap">Clap</button>
         <button class="tecla tecla_tim">Tim</button>
 
@@ -43,6 +42,6 @@
     <audio src="sounds/keyz.wav" id="som_tecla_psh"></audio>
     <audio src="sounds/keyx.wav" id="som_tecla_tic"></audio>
     <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio>
-
+    <script src="./main.js"></script>
 </body>
 </html>
